--- a/skills/dff/Dockerfile
+++ b/skills/dff/Dockerfile
@@ -10,7 +10,7 @@ RUN python -m spacy download en
 RUN python -m spacy download en_core_web_sm
 RUN python -m spacy download en_core_web_md
 RUN python -m nltk.downloader vader_lexicon
-
+RUN python -m nltk.downloader all
 
 
 COPY /. /.
