--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: services/agent/Dockerfile
-      network_mode: host
+      network: host
     container_name: agent
     depends_on:
       - mongo
@@ -25,7 +25,7 @@ services:
     command: uvicorn tts:app --host 0.0.0.0 --reload --port 4344
     build:
       context: services/tts
-      network_mode: host
+      network: host
     ports:
       - 4344:4344
     environment:
@@ -34,7 +34,7 @@ services:
     command: uvicorn main:app --host 0.0.0.0 --reload  --port 4343
     build:
       context: services/nemo
-      network_mode: host
+      network: host
     depends_on:
       - agent
     ports:
@@ -42,7 +42,7 @@ services:
   dff-bot-persona-skill:
     build:
       context: skills/dff
-      network_mode: host
+      network: host
     command: gunicorn --workers=1 --timeout 500 --graceful-timeout 500 server:app -b 0.0.0.0:8105 --reload --preload
     environment:
       WIKIDATA_URL: http://wiki-parser:3013/model
@@ -51,7 +51,7 @@ services:
   rule_based_response_selector:
     build:
       context: selectors/rule_based_response_selector
-      network_mode: host
+      network: host
     command: gunicorn --workers=1 server:app -b 0.0.0.0:3003
     volumes: [ ]
     ports:
