--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       WIKIDATA_URL: http://wiki-parser:3013/model
       ENTITY_LINKING_URL: http://entity_linking:3006/model
     #network_mode: "host"
+    extra_hosts:
+      - "dockerhost:172.17.0.1"
   mongo:
     command: mongod
     image: mongo:4.0.0
@@ -55,6 +57,8 @@ services:
     ports:
       - 8105:8105
     #network_mode: "host"
+    extra_hosts:
+      - "dockerhost:172.17.0.1"
   rule_based_response_selector:
     build:
       context: selectors/rule_based_response_selector
